@@ -72,6 +72,8 @@ class ECCPProcess extends TuberiaProcess
         	return FALSE;
         }
 
+        $this->_repararAuditoriasIncompletas();
+
         // Iniciar la conexión Asterisk
         if (!$this->_iniciarConexionAMI()) return FALSE;
         
@@ -121,6 +123,162 @@ class ECCPProcess extends TuberiaProcess
             $this->_db = NULL;
             $this->_log->output("FATAL: no se puede conectar a DB - ".$e->getMessage());
             return FALSE;
+        }
+    }
+
+    /**
+     * Procedimiento que intenta reparar los registros de auditoría que no están
+     * correctamente cerrados, es decir, que tiene NULL como fecha de cierre.
+     * Primero se identifican los agentes para los cuales existen auditorías
+     * incompletas, y luego se intenta reparar para cada agente. Se asume que
+     * este método se invoca ANTES de empezar a escuchar peticiones ECCP, y que
+     * la base de datos es modificada únicamente por este proceso, y no por
+     * otras copias concurrentes del dialer (lo cual no está soportado 
+     * actualmente).
+     */
+    private function _repararAuditoriasIncompletas()
+    {
+    	try {
+    		$sPeticionSQL = <<<AGENTES_AUDIT_INCOMPLETO
+SELECT DISTINCT agent.id, agent.type, agent.number, agent.name, agent.estatus
+FROM audit, agent
+WHERE agent.id = audit.id_agent AND audit.id_break IS NULL AND audit.datetime_end IS NULL
+ORDER BY agent.id
+AGENTES_AUDIT_INCOMPLETO;
+            $recordset = $this->_db->prepare($sPeticionSQL);
+            $recordset->execute();
+            $agentesReparar = $recordset->fetchAll(PDO::FETCH_ASSOC);
+            $recordset->closeCursor();
+            foreach ($agentesReparar as $row) {
+            	$this->_log->output('INFO: se ha detectado auditoría incompleta '.
+                    "para {$row['type']}/{$row['number']} - {$row['name']} ".
+                    "(id_agent={$row['id']} ".(($row['estatus'] == 'A') ? 'ACTIVO' : 'INACTIVO').")");
+                $this->_repararAuditoriaAgente($row['id']);
+            }
+    	} catch (PDOException $e) {
+    		$this->_stdManejoExcepcionDB($e, 'no se puede terminar de reparar auditorías');
+    	}
+    }
+
+    private function _repararAuditoriaAgente($idAgente)
+    {
+        // Listar todas las auditorías incompletas para este agente
+    	$sPeticionAuditorias = <<<LISTA_AUDITORIAS_AGENTE
+SELECT id, datetime_init FROM audit
+WHERE id_agent = ? AND id_break IS NULL AND datetime_end IS NULL
+ORDER BY datetime_init
+LISTA_AUDITORIAS_AGENTE;
+        $recordset = $this->_db->prepare($sPeticionAuditorias);
+        $recordset->execute(array($idAgente));
+        $listaAudits = $recordset->fetchAll(PDO::FETCH_ASSOC);
+        $recordset->closeCursor();
+        
+        foreach ($listaAudits as $auditIncompleto) {
+        	/* Se intenta examinar la base de datos para obtener la fecha 
+             * máxima para la cual hay evidencia de actividad entre el inicio
+             * de este registro y el inicio del siguiente registro. */
+            $this->_log->output("INFO:\tSesión ID={$auditIncompleto['id']} iniciada en {$auditIncompleto['datetime_init']}");
+            
+            $sFechaSiguienteSesion = NULL;
+            $idUltimoBreak = NULL;
+            $sFechaInicioBreak = NULL;
+            $sFechaFinalBreak = NULL;
+            $sFechaInicioLlamada = NULL;
+            $sFechaFinalLlamada = NULL;
+
+            // El inicio de la siguiente sesión es un tope máximo para el final de la sesión incompleta.
+            $recordset = $this->_db->prepare(
+                'SELECT datetime_init FROM audit WHERE id_agent = ? AND id_break IS NULL '.
+                'AND datetime_init > ? ORDER BY datetime_init LIMIT 0,1');
+            $recordset->execute(array($idAgente, $auditIncompleto['datetime_init']));
+            $tupla = $recordset->fetch(PDO::FETCH_ASSOC);
+            $recordset->closeCursor();
+            if (!$tupla) {
+                $this->_log->output("INFO:\tNo hay sesiones posteriores a esta sesión incompleta.");
+            } else {
+            	$this->_log->output("INFO:\tSiguiente sesión iniciada en {$tupla['datetime_init']}");
+                $sFechaSiguienteSesion = $tupla['datetime_init'];
+            }
+            
+            /* La sesión sólo puede extenderse hasta el final de la pausa antes de 
+             * la siguiente sesión, o la fecha actual */
+            $recordset = $this->_db->prepare(
+                'SELECT id, datetime_init, datetime_end FROM audit WHERE id_agent = ? '.
+                    'AND id_break IS NOT NULL AND datetime_init > ? AND datetime_init < ? ' .
+                'ORDER BY datetime_init DESC LIMIT 0,1');
+            $recordset->execute(array($idAgente, $auditIncompleto['datetime_init'],
+                (is_null($sFechaSiguienteSesion) ? date('Y-m-d H:i:s') : $sFechaSiguienteSesion)));
+            $tupla = $recordset->fetch(PDO::FETCH_ASSOC);
+            $recordset->closeCursor();
+            if (!$tupla) {
+                $this->_log->output("INFO:\tNo hay breaks pertenecientes a esta sesión incompleta.");
+            } else {
+                $this->_log->output("INFO:\tÚltimo break de sesión incompleta inicia en {$tupla['datetime_init']}, ".
+                    (is_null($tupla['datetime_end']) ? 'está incompleto' : 'termina en '.$tupla['datetime_end']));
+                $idUltimoBreak = $tupla['id'];
+                $sFechaInicioBreak = $tupla['datetime_init'];
+                $sFechaFinalBreak = $tupla['datetime_end'];
+            }
+            
+            /* La sesión sólo puede extenderse hasta el final de la última llamada
+             * atendida antes de la siguiente sesión, si existe, o hasta la fecha 
+             * actual */
+            $recordset = $this->_db->prepare(
+                'SELECT start_time, end_time FROM calls '.
+                'WHERE id_agent = ? AND start_time >= ? AND start_time < ? '.
+                'ORDER BY start_time DESC LIMIT 0,1');
+            $recordset->execute(array($idAgente, $auditIncompleto['datetime_init'],
+                (is_null($sFechaSiguienteSesion) ? date('Y-m-d H:i:s') : $sFechaSiguienteSesion)));
+            $tupla = $recordset->fetch(PDO::FETCH_ASSOC);
+            $recordset->closeCursor();
+            if (!$tupla) {
+                $this->_log->output("INFO:\tNo hay llamadas salientes pertenecientes a esta sesión incompleta.");
+            } else {
+                $this->_log->output("INFO:\tÚltima llamada saliente de sesión incompleta inicia en {$tupla['start_time']}, ".
+                    (is_null($tupla['end_time']) ? 'está incompleta' : 'termina en '.$tupla['end_time']));
+                $sFechaInicioLlamada = $tupla['start_time'];
+                $sFechaFinalLlamada = $tupla['end_time'];
+            }
+            $recordset = $this->_db->prepare(
+                'SELECT datetime_init, datetime_end FROM call_entry '.
+                'WHERE id_agent = ? AND datetime_init >= ? AND datetime_init < ? '.
+                'ORDER BY datetime_init DESC LIMIT 0,1');
+            $recordset->execute(array($idAgente, $auditIncompleto['datetime_init'],
+                (is_null($sFechaSiguienteSesion) ? date('Y-m-d H:i:s') : $sFechaSiguienteSesion)));
+            $tupla = $recordset->fetch(PDO::FETCH_ASSOC);
+            $recordset->closeCursor();
+            if (!$tupla) {
+                $this->_log->output("INFO:\tNo hay llamadas entrantes pertenecientes a esta sesión incompleta.");
+            } else {
+                $this->_log->output("INFO:\tÚltima llamada entrante de sesión incompleta inicia en {$tupla['datetime_init']}, ".
+                    (is_null($tupla['datetime_end']) ? 'está incompleta' : 'termina en '.$tupla['datetime_end']));
+                if (is_null($sFechaInicioLlamada) || $sFechaInicioLlamada < $tupla['datetime_init'])
+                    $sFechaInicioLlamada = $tupla['datetime_init'];
+                if (is_null($sFechaFinalLlamada) || $sFechaFinalLlamada < $tupla['datetime_end'])
+                    $sFechaFinalLlamada = $tupla['datetime_end'];
+            }
+            
+            /* De entre todas las fecha recogidas, se elige la más reciente como
+             * la fecha de final de auditoría. Esto incluye a la fecha de inicio
+             * de auditoría, con lo que una auditoría sin otros indicios quedará
+             * de longitud cero. */
+            $sFechaFinal = $auditIncompleto['datetime_init'];
+            if (!is_null($sFechaInicioBreak) && $sFechaInicioBreak > $sFechaFinal)
+                $sFechaFinal = $sFechaInicioBreak;
+            if (!is_null($sFechaFinalBreak) && $sFechaFinalBreak > $sFechaFinal)
+                $sFechaFinal = $sFechaFinalBreak;
+            if (!is_null($sFechaInicioLlamada) && $sFechaInicioLlamada > $sFechaFinal)
+                $sFechaFinal = $sFechaInicioLlamada;
+            if (!is_null($sFechaFinalLlamada) && $sFechaFinalLlamada > $sFechaFinal)
+                $sFechaFinal = $sFechaFinalLlamada;
+            
+            $this->_log->output("INFO:\t\\--> Fecha estimada de final de sesión es $sFechaFinal, se actualiza...");
+            $sth = $this->_db->prepare(
+                'UPDATE audit SET datetime_end = ?, duration = TIMEDIFF(?, datetime_init) WHERE id = ?');
+            if (!is_null($idUltimoBreak) && is_null($sFechaFinalBreak)) {
+                $sth->execute(array($sFechaFinal, $sFechaFinal, $idUltimoBreak));
+            }
+            $sth->execute(array($sFechaFinal, $sFechaFinal, $auditIncompleto['id']));
         }
     }
 
